storm fixes